# gh-api-graveyard

./: .gitignore  .graveyard.yml  DEVELOPMENT.md  QUICKSTART.md  README.md  SUBMISSION.md  TESTING.md  api-graveyard-report.md  coverage.xml  gh-graveyard  install.sh  pyproject.toml  report.md  requirements-dev.txt  requirements.txt  setup.py  template.txt
.github/workflows/: api-graveyard.yml  test.yml
detector/: __init__.py  analysis.py  analytics.py  analyzer.py  cli.py  console.py  database.py  discovery.py  git_ops.py  github_org.py  multi_service.py  parsers.py  reports.py  spec_modifier.py  utils.py
detector/static/js/: app.js
detector/templates/: index.html  service.html  trends.html
detector/web/: api.py  server.py
docs/: QUICKSTART.md
samples/: logs.json  multi-service-config.yaml  openapi.yaml
screenshots/: README.md
tests/: conftest.py
tests/fixtures/: invalid_logs.jsonl  invalid_openapi.yaml  sample_logs.jsonl  sample_openapi.yaml  swagger_2_0.yaml
tests/integration/: test_workflows.py
tests/performance/: test_scalability.py
tests/unit/: test_analysis.py  test_analytics.py  test_discovery.py  test_multi_service.py  test_parsers.py  test_spec_modifier.py
